<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/activity_room_confirmation_margin"
    android:background="@android:color/white"
    tools:context=".RoomConfirmationActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/rommConfirmationNumber"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/activity_room_confirmation_room_view_text_size"
        android:textColor="@android:color/holo_red_dark"
        style="?android:attr/spinnerItemStyle"
        android:layout_marginBottom="@dimen/activity_room_configuration_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_below="@id/rommConfirmationNumber"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/activity_room_confirmation_room_info_view"
        android:layout_marginBottom="@dimen/activity_room_configuration_book_button_height"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_room_configuration_margin">

        <TextView
            android:text="@string/type"
            android:textAlignment="center"
            android:layout_width="@dimen/activity_room_configuration_width"
            android:textSize="@dimen/activity_room_configuration_text_size"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/activity_room_confirmation_type_view"
            android:textSize="@dimen/activity_room_configuration_text_size"
            android:layout_width="@dimen/activity_room_configuration_width"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_room_configuration_margin">

        <TextView
            android:text="@string/cost"
            android:textAlignment="center"
            android:layout_width="@dimen/activity_room_configuration_width"
            android:textSize="@dimen/activity_room_configuration_text_size"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/activity_room_confirmation_cost_view"
            android:textSize="@dimen/activity_room_configuration_text_size"
            android:layout_width="@dimen/activity_room_configuration_width"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_room_configuration_margin">

        <TextView
            android:text="@string/floor"
            android:textAlignment="center"
            android:layout_width="@dimen/activity_room_configuration_width"
            android:textSize="@dimen/activity_room_configuration_text_size"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/activity_room_confirmation_floor_view"
            android:textSize="@dimen/activity_room_configuration_text_size"
            android:layout_width="@dimen/activity_room_configuration_width"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_room_configuration_margin">

        <TextView
            android:text="@string/date"
            android:textAlignment="center"
            android:layout_width="@dimen/activity_room_configuration_width"
            android:textSize="@dimen/activity_room_configuration_text_size"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/activity_room_confirmation_date_view"
            android:textSize="@dimen/activity_room_configuration_text_size"
            android:layout_width="@dimen/activity_room_configuration_width"
            android:layout_height="wrap_content" />

    </LinearLayout>

    </LinearLayout>

    <Button
        android:onClick="onBook"
        android:layout_alignParentBottom="true"
        android:id="@+id/activityRooConfirmationButton"
        android:textColor="@android:color/white"
        android:background="@drawable/click_background"
        android:text="@string/book"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_room_configuration_book_button_height" />

    <pl.droidsonroids.gif.GifImageView
        android:visibility="gone"
        android:id="@+id/activityRooConfirmationLoading"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_room_configuration_book_button_height"
        android:src="@drawable/oxygen_loader"
        android:contentDescription="@string/loading" />

</RelativeLayout>
